2009-12-06  Óscar Fuentes  <ofv@wanadoo.es>

	* vc-bzr.el (vc-bzr-annotate-command): Handle the case where the
	author field is too short.

2009-12-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-print-log): Handle a limit argument.  Display
	the short log in graph form and with labels.
	(vc-git-log-view-mode): Handle labels.

	Make vc-revert change VC state from 'added to 'unregistered.
	* vc-git.el (vc-git-revert): Call git reset first.

2009-12-06  Ulf Jasper  <ulf.jasper@web.de>

	* net/newst-backend.el :
	* net/newst-plainview.el:
	* net/newst-reader.el:
	* net/newst-ticker.el:
	* net/newst-treeview.el:
	* net/newsticker.el: Require/provide newst-... (instead of
	newsticker-...). (Bug#5096)

2009-12-06  Chong Yidong  <cyd@stupidchicken.com>

	* log-view.el (log-view-mode-map): Bind "=" to log-view-diff too.

	* vc-bzr.el (vc-bzr-annotate-command): Show author in annotation.
	Handle empty author field (Bug#4144).  Suggested by Óscar Fuentes.
	(vc-bzr-annotate-time, vc-bzr-annotate-extract-revision-at-line):
	Update annotation regexp.

	* simple.el (beginning-of-visual-line): Constrain to field
	boundaries (Bug#5106).

2009-12-06  Ulf Jasper  <ulf.jasper@web.de>

	* xml.el (xml-substitute-numeric-entities): Moved
	newsticker--decode-numeric-entities in newst-backend.el to
	xml-substitute-numeric-entities in xml.el. (Bug#5008)

	* net/newst-backend.el (newsticker--parse-generic-feed)
	(newsticker--parse-generic-items)
	(newsticker--decode-numeric-entities): Moved
	newsticker--decode-numeric-entities in newst-backend.el to
	xml-substitute-numeric-entities in xml.el. (Bug#5008)

2009-12-06  Daniel Colascione  <dan.colascione@gmail.com>

	* progmodes/js.el (js--js-not): Add null to the list of values.

2009-12-06  Chong Yidong  <cyd@stupidchicken.com>

	* ansi-color.el (ansi-color-for-comint-mode): Add :version
	keyword.

2009-12-06  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-enclosing-field): Exclude entry